fix(CodeBlock): add in blurring to match theme bg color

--- a/src/components/CodeBlock/CodeBlock.module.css
+++ b/src/components/CodeBlock/CodeBlock.module.css
@@ -22,6 +22,9 @@
   right: calc(var(--eds-spacing-size-2) * 1px);
   top: calc(var(--eds-spacing-size-2) * 1px);
 
+  /* use blackdrop-filter to fuzz out the text or other colors, to match the themed bg color */
+  backdrop-filter: blur(100px);
+
   transform: translateY(-8px);
   transition: all calc(var(--eds-anim-fade-quick) * 1s) ease-in-out;
 
@@ -33,5 +36,4 @@
 
 .code-block__block {
   font-family: var(--eds-typography-font-family-3);
-  height: 100%;
 }
